// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`set_context > can set the context to project and organization at the same time > set-context 1`] = `""`;

exports[`set_context > can set the context to project and organization at the same time > set-context 2`] = `
"{
  "projectId": "test_project",
  "orgId": "org-2"
}"
`;

exports[`set_context > should set the context to organization > create projects selecting organization from the context 1`] = `
"project:
  id: new-project-789012
  name: test_project
  created_at: 2022-01-01T00:00:00.000Z
  org_id: org-2
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`set_context > should set the context to organization > list projects selecting organization from the context 1`] = `
"- id: 4
  name: Project_4
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
- id: 5
  name: Project_5
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
- id: 6
  name: Project_6
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
"
`;

exports[`set_context > should set the context to organization > list projects with explicit org id overrides context 1`] = `
"- id: 7
  name: Project_7
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-3
"
`;

exports[`set_context > should set the context to organization > set-context 1`] = `""`;

exports[`set_context > should set the context to organization > set-context 2`] = `
"{
  "orgId": "org-2"
}"
`;

exports[`set_context > should set the context to project > get project id overrides context set project 1`] = `
"id: project-id-123
name: project name 123
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`set_context > should set the context to project > list branches selecting project from the context 1`] = `
"- id: br-main-branch-123456
  name: main
  default: true
  created_at: 2021-01-01T00:00:00.000Z
  updated_at: 2021-01-01T00:00:00.000Z
- id: br-sunny-branch-123456
  name: test_branch
  parent_id: br-parent-branch-123456
  created_at: 2021-01-01T00:00:00.000Z
  updated_at: 2021-01-01T00:00:00.000Z
- id: br-numbered-branch-123456
  name: "123"
  parent_id: br-parent-branch-123456
  created_at: 2021-01-01T00:00:00.000Z
  updated_at: 2021-01-01T00:00:00.000Z
- id: br-numbered-branch-123456
  name: test_branch_with_fixed_cu
  parent_id: br-parent-branch-123456
  created_at: 2021-01-01T00:00:00.000Z
  updated_at: 2021-01-01T00:00:00.000Z
- id: br-numbered-branch-123456
  name: test_branch_with_autoscaling
  parent_id: br-parent-branch-123456
  created_at: 2021-01-01T00:00:00.000Z
  updated_at: 2021-01-01T00:00:00.000Z
"
`;

exports[`set_context > should set the context to project > set the branchId and projectId is from context 1`] = `
"- name: db1
  owner_name: user1
- name: db2
  owner_name: user2
- name: test_db
  owner_name: test_user
"
`;

exports[`set_context > should set the context to project > set the branchId and projectId is from context 2`] = `""`;

exports[`set_context > should set the context to project > set-context 1`] = `""`;

exports[`set_context > should set the context to project > set-context 2`] = `
"{
  "projectId": "test"
}"
`;
